Add demo booking page with form data collection

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <p>Compassionate personalised healthcare meets intelligent workforce automation — delivered through our powerful STAFFin platform.</p>
         
         <div class="btn-group">
-          <a href="#demo" class="btn"><i class="fas fa-calendar-check"></i> Book a Demo</a>
+          <a href="demo-booking.html" class="btn"><i class="fas fa-calendar-check"></i> Book a Demo</a>
         </div>
       </div>
     </div>
