--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       <p style="font-size:1.4rem; max-width:760px; margin:2rem auto 3rem; opacity:0.95;">
         Automate operations • Place talent faster • Deliver exceptional care • Gain powerful insights — all with STAFFin.
       </p>
-      <a href="mailto:office@elitecas.co.uk?subject=EliteCare%20Demo%20Request" class="btn" style="background:var(--white); color:var(--primary); font-size:1.4rem; padding:20px 60px;">
+      <a href="demo-booking.html" class="btn" style="background:var(--white); color:var(--primary); font-size:1.4rem; padding:20px 60px;">
         <i class="fas fa-video"></i> Book Your Demo Now
       </a>
     </div>
